[project]
name = "comfyui-axces2000"
description = "Custom ComfyUI nodes by axces2000 — Audio Loader, Resolution Master, and more"
version = "1.2.0"
license = { file = "LICENSE.txt" }
dependencies = ["torchaudio", "soundfile"]

[project.urls]
Repository = "https://github.com/axces2000/comfyui-axces2000"

[tool.comfy]
PublisherId = "axces2000"
DisplayName = "Axces2000 Nodes"
Icon = ""
